test/langtools/tools/javac/T8181464/LambdaInAnnotationsCausesNPETest1.out
LambdaInAnnotationsCausesNPETest1.java:11:15: compiler.err.expression.not.allowable.as.annotation.value
1 error
